--- a/index.html
+++ b/index.html
@@ -2,46 +2,31 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>baitaptuan1</title>
-	<style>
-		body{
+	<title>To Do List</title>
+	<style type="text/css">
+		body {
 			width: 500px;
-			height: auto;
-			margin: 0px;
-			padding-left: 444px;
+			margin: 0 auto;
+			margin-top: 20px;
 		}
-
 		.header{
 			background: red;
-			margin-bottom: 0px;
-		}
-		.header h1{
+			height: 100px;
 			color: white;
-			text-align: center;
 		}
-		.header .inadd input{
-			margin-bottom: 10px;
-			border: none;
-			font-size: 30px;
-			width: 71%;
+		.input{
+			padding-left: 55px;
 		}
-		.header .inadd span{
-			border: none ;
-			font-size: 33px;
-			background-color:#5d6968;
-			color: black;
-			padding-bottom: 1px;
+		.input-in{
+			font-size: 25px;
 		}
-
-		.header .inadd span:hover{
-			background-color: grey;
-			cursor: pointer;
+		.button{
+			font-size: 25px;
 		}
-
-		.header form{
-			text-align: center;
+		.header-up{
+			font-size: 52px;
+			padding-left: 84px;
 		}
-
 		.main ul{
 			padding-left: 0px;
 			margin: 0px;
@@ -54,158 +39,129 @@
 			padding: 12px 10px 10px 40px;
 			background-color: #ece1e1; 
 		}
-
 		.main ul li:hover{
 			background-color: #b9a0a0;
 			position: relative;
 		}
-
 		.main ul li{
 			float: left;
 			clear: left;
 		}
-
 		.main ul li .close{
 			float: right;
 			clear: right;
 			top: 0px;
 			right: 0px;
-
+		}
+		.main ul li span{
+			height: 18px;
+			width: 10px;
 		}
 		.main ul li:hover .close{
 			background: red;
 			position: absolute;
 			padding: 13px;
 		}
+
 	</style>
 </head>
 <body>
-	<div id="myDIV" class = "header">
-		<h1>Danh sách học sinh trong lớp</h1>
-		<form action="" class="inadd">
-			<input id="myInput" type="text" placeholder="Title..." /><span id="add" class="inadd">ADD</span>
-		</form>
-	</div>
+	<div id="main-todo">
+		<div class="header">
+			<div class="header-up">My To Do List</div>
+			<div class="input">
+			<input id="MyInput" class="input-in" type="text"><button id="add" onclick= ""  class="button">Add</button>
+			</div>
+		</div>
 	<div class="main">
-		<ul id="myUL">
+		<ul id="myUl">
 			
 		</ul>
 		
 	</div>
-	<script>
+	</div>
+	<script type="text/javascript">
 		var span = document.getElementById('add');
-		var input = document.getElementById('myInput');
-		var list = document.getElementById('myUL');
-
-function removeTodoFromStorage(index) {
+		var input = document.getElementById('MyInput');
+		var list = document.getElementById('myUl');
+function removeTodoFromStorage(index) {//hàm xóa một mục trong list
     var todos = getTodosFromStorage();
-
     todos.splice(index, 1 );
-
     saveTodosToStorage(todos);
 }
-function addTodoToLocalStorage(text) {
+function addTodoToLocalStorage(text) {//hàm add một mục mới vào list
     var todos = getTodosFromStorage();
-
     todos.push({//chuyển giá trị của todos từ string sang obj 
         text: text,
         completed: false
     });
-
     saveTodosToStorage(todos);//lưu giá trị vừa chuyển sang obj vào todos
 }
-function handleRemoveTodo(target) {
+function handleRemoveTodo(target) {//hàm xóa giá trị trong list
     var todo = target.parentElement;
-
     var id = todo.id;
-
     removeTodoFromStorage(id);
-    render();
 }
-
-function handcomplete(target){
+function handcomplete(target){//hàm đánh dấu hoàn thành công việc trong list
     var todos = getTodosFromStorage();
-
     var id = target.id;
     var todo = todos[id];
     todo.completed = !todo.completed;
-
     saveTodosToStorage(todos);
 }
-
-function onClickTodo(event) {
+function onClickTodo(event) {//hàm  xử lí việc complete và xóa các công việc trong list
     var target = event.target;
-
-    var tag = target.tagName;
-
-    if(input&&tag === 'LI'){
-
+    var tag = target.tagName;//có một cái tag nếu bấm vào tag thì sẽ làm một việc gì đó(tagName chính là một trong các thẻ mình bấm vào)
+    if(tag === 'LI'){
         handcomplete(target);
-
 	}
-
     if (tag === 'SPAN') {
         handleRemoveTodo(target);
     }
-
-
     render();
 }
-
-function renderTodoToHTML(text, completed,i) {
-    var todo = document.createElement('li');
+function renderTodoToHTML(text, completed,i) {//hàm render một mục của list ra to do list
+    var todo = document.createElement('li');//tạo một thẻ li mới
     todo.innerHTML = text + '<span class="close">x</span>';
     todo.id = i;
     if (completed) {
         todo.className = "completed";
     }
     todo.addEventListener('click', onClickTodo);
-
     list.appendChild(todo);
 }
-
-function getTodosFromStorage() {
-    var str = localStorage.getItem('todos');
+function getTodosFromStorage() {//hàm lấy giá trị trong localstorage
+    var str = localStorage.getItem('todos');//lấy giá trị locstr có tên là todos nó đương nhiên có dạng là object
         return JSON.parse(str);
 }
-
-function saveTodosToStorage(todos) {
-    var str = JSON.stringify(todos);
-    return localStorage.setItem('todos', str);
+function saveTodosToStorage(todos) {//hàm lưu giá trị trong localstorage
+    var str = JSON.stringify(todos);//chuyển đối tượng trong locstr thành dạng string
+    return localStorage.setItem('todos', str);//đặt tên cho locstr là todos
 }
-
-function clearList() {
+function clearList() {//hàm này có tác dụng làm sạch phần input
     list.innerHTML = '';
 }
-
-function renderTodosList() {
+function renderTodosList() {//hàm có tác dụng in toàn bộ list 
     var todos = getTodosFromStorage();
-
     for (var i = 0; i < todos.length; i++) {
         var todo = todos[i];
-
         renderTodoToHTML(todo.text, todo.completed,i);
     }
 }
-
-function render() {
+function render() {//hàm có tác dụng xóa và in lại toàn bộ list trong quá trình làm việc có sự sửa đổi
     clearList();
     renderTodosList();
 }
-
-function emptyInput() {
+function emptyInput() {//hàm có tác dụng làm sạch input để dễ viết hành động tiếp theo
    input.value = '';
 }
-
-span.addEventListener('click', function () {
-    var text = input.value;
+span.addEventListener('click', function () {//hàm này coi như là hàm chính luôn khi mà mình bấm vào button add thì việc thêm thành phần vào list được thực hiện
+    var text = input.value;//lấy giá trị trong input
     addTodoToLocalStorage(text);
     render();
     emptyInput();
 });
 render();
-			
 	</script>
-
 </body>
 </html>
